# demo20240629-oras147-testregistries

./: .gitignore  .gitleaks.toml  README.md  artifact.txt  demo-dockderhub-token.ipynb  demo-ghcrio-token.ipynb  demo-localhost-distribution-basic.ipynb  demo-localhost-quay-basic.ipynb  demo-localhost-quay-token.ipynb  demo-localhost-zot-basic.ipynb  demo-quayio-token.ipynb  pyproject.toml
config/distribution/: README.md  config.yml  run_registry.sh
config/zot/: README.md  auth.htpasswd  config.json  run_registry.sh
