[tool.poetry]
name = "demo20240629-oras147-testregistries"
version = "0.1.0"
description = ""
authors = ["tarilabs <matteo.mortari@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
oras = { git = "https://github.com/oras-project/oras-py.git", rev = "caf8db5" }
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
